tests/baselines/reference/parserGreaterThanTokenAmbiguity12.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity12.ts(1,6): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity12.ts (1 errors) ====
    1 >> = 2;
         ~
!!! error TS1109: Expression expected.